testsuite/gnatprove/tests/P511-007__nonexisting_ext_obj_dir/test.out
test.gpr:3:31: error: undefined external reference "NONEXISTING_ENVIRONMENTAL_VARIABLE"
